<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">


    <EditText
        android:id="@+id/minimumGradeField"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="206dp"
        android:layout_marginRight="206dp"
        android:background="@color/colorPrimary"
        android:ems="10"
        android:inputType="numberDecimal"
        android:singleLine="true"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginTop="324dp"
        android:lineSpacingExtra="18sp"
        android:text="@string/minimum_desired_grade"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/examPointsField"
        app:layout_constraintTop_toBottomOf="@+id/MainLabel" />

    <Button
        android:id="@+id/calculate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/MainLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="163dp"
        android:layout_marginRight="163dp"
        android:text="@string/what_can_i_miss"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:lineSpacingExtra="18sp"
        android:text="@string/current_points_in_class"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/currentPointsField"
        app:layout_constraintTop_toBottomOf="@+id/MainLabel" />

    <EditText
        android:id="@+id/totalPointsField"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="206dp"
        android:layout_marginRight="206dp"
        android:background="@color/colorPrimary"
        android:ems="10"
        android:inputType="numberDecimal"
        android:singleLine="true"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:lineSpacingExtra="18sp"
        android:text="@string/total_class_points"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/totalPointsField"
        app:layout_constraintTop_toBottomOf="@+id/MainLabel" />

    <EditText
        android:id="@+id/examPointsField"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="206dp"
        android:layout_marginRight="206dp"
        android:background="@color/colorPrimary"
        android:ems="10"
        android:inputType="numberDecimal"
        android:singleLine="true"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginTop="220dp"
        android:lineSpacingExtra="18sp"
        android:text="@string/upcoming_exam_points"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/examPointsField"
        app:layout_constraintTop_toBottomOf="@+id/MainLabel" />

    <EditText
        android:id="@+id/currentPointsField"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="206dp"
        android:layout_marginRight="206dp"
        android:background="@color/colorPrimary"
        android:ems="10"
        android:inputType="numberDecimal"
        android:singleLine="true"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />
</androidx.constraintlayout.widget.ConstraintLayout>